added images with simple css border and background styling. and updated html title

--- a/index.html
+++ b/index.html
@@ -15,32 +15,35 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>GifTastic Homework</title>
 
     <!-- These stylesheets are from the theme I downloaded; they enable the nice background and styes-->
 
-    <!-- Bootstrap Core CSS - CKS NOTE: this adds the core Bootstrap stylesheet that the theme depends on -->
-    <link href="theme/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Core CSS - CKS NOTE: this adds the core Bootstrap stylesheet that the theme depends on -->
+        <link href="theme/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts - CKS NOTE: these are Google fonts that the theme uses in this stylesheet-->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+        <!-- Custom Fonts - CKS NOTE: these are Google fonts that the theme uses in this stylesheet-->
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
-    <!-- Plugin CSS - CKS NOTE: these are additional stylesheets that the theme uses for icons and device formatting (which i'm not using in my assignment)-->
-    <link rel="stylesheet" href="theme/lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="theme/lib/simple-line-icons/css/simple-line-icons.css">
-    <link rel="stylesheet" href="theme/lib/device-mockups/device-mockups.min.css">
+        <!-- Plugin CSS - CKS NOTE: these are additional stylesheets that the theme uses for icons and device formatting (which i'm not using in my assignment)-->
+        <link rel="stylesheet" href="theme/lib/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="theme/lib/simple-line-icons/css/simple-line-icons.css">
+        <link rel="stylesheet" href="theme/lib/device-mockups/device-mockups.min.css">
 
-    <!-- Theme CSS - CKS NOTE: this is the theme stylesheet that builds on top of bootstrap, and includes the above fonts and plug-in stylesheets, to enable the theme-->
-    <link href="theme/css/new-age.min.css" rel="stylesheet">
+        <!-- Theme CSS - CKS NOTE: this is the theme stylesheet that builds on top of bootstrap, and includes the above fonts and plug-in stylesheets, to enable the theme-->
+        <link href="theme/css/new-age.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+    <!-- my stylesheet -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
