all images add with start and stop functionality

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
     <!-- Header section will contain all content. Due to free theme that was downloaded, this area gets the nice background that I wanted -->
     <header>
-        <div class="container">
+        <div class="container" >
         <!-- need space so nav bar doesn't overlap content -->
             <br>
             <br>
             <br>
             <!-- button area starts here -->
-            <div id="button-section"> 
+            <div id="button-section" id="top"> 
             </div>
         
             <hr>
